# metalcraft-agent-gateway

./: .env.example  Cargo.toml  Dockerfile  README.md
src/: auth.rs  discord_listener.rs  events.rs  main.rs  routes.rs  subscribers.rs  webhooks.rs
src/platform/: discord.rs  mod.rs  slack.rs
